@@ -8,13 +8,9 @@ package org.elasticsearch.xpack.ml;
 
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
-import org.elasticsearch.action.admin.cluster.node.stats.NodeStats;
-import org.elasticsearch.action.admin.cluster.node.stats.NodesStatsAction;
-import org.elasticsearch.action.admin.cluster.node.stats.NodesStatsResponse;
 import org.elasticsearch.action.support.ActionFilters;
 import org.elasticsearch.action.support.PlainActionFuture;
-import org.elasticsearch.client.Client;
-import org.elasticsearch.cluster.ClusterName;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
@@ -31,6 +27,8 @@ import org.elasticsearch.env.TestEnvironment;
 import org.elasticsearch.ingest.IngestStats;
 import org.elasticsearch.license.MockLicenseState;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.threadpool.TestThreadPool;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -46,6 +44,7 @@ import org.elasticsearch.xpack.core.ml.action.GetDataFrameAnalyticsStatsAction;
 import org.elasticsearch.xpack.core.ml.action.GetDatafeedsStatsAction;
 import org.elasticsearch.xpack.core.ml.action.GetJobsStatsAction;
 import org.elasticsearch.xpack.core.ml.action.GetTrainedModelsAction;
+import org.elasticsearch.xpack.core.ml.action.GetTrainedModelsStatsAction;
 import org.elasticsearch.xpack.core.ml.datafeed.DatafeedConfig;
 import org.elasticsearch.xpack.core.ml.datafeed.DatafeedState;
 import org.elasticsearch.xpack.core.ml.dataframe.DataFrameAnalyticsConfig;
@@ -54,8 +53,13 @@ import org.elasticsearch.xpack.core.ml.dataframe.DataFrameAnalyticsState;
 import org.elasticsearch.xpack.core.ml.dataframe.stats.common.MemoryUsage;
 import org.elasticsearch.xpack.core.ml.inference.TrainedModelConfig;
 import org.elasticsearch.xpack.core.ml.inference.TrainedModelConfigTests;
+import org.elasticsearch.xpack.core.ml.inference.allocation.AllocationState;
+import org.elasticsearch.xpack.core.ml.inference.allocation.AllocationStats;
+import org.elasticsearch.xpack.core.ml.inference.allocation.AllocationStatus;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.ClassificationConfig;
+import org.elasticsearch.xpack.core.ml.inference.trainedmodel.NerConfig;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.RegressionConfig;
+import org.elasticsearch.xpack.core.ml.inference.trainedmodel.TrainedModelSizeStats;
 import org.elasticsearch.xpack.core.ml.job.config.AnalysisConfig;
 import org.elasticsearch.xpack.core.ml.job.config.DataDescription;
 import org.elasticsearch.xpack.core.ml.job.config.Detector;
@@ -68,6 +72,7 @@ import org.elasticsearch.xpack.core.watcher.support.xcontent.XContentSource;
 import org.elasticsearch.xpack.ml.inference.ingest.InferenceProcessor;
 import org.elasticsearch.xpack.ml.job.JobManager;
 import org.elasticsearch.xpack.ml.job.JobManagerHolder;
+import org.junit.After;
 import org.junit.Before;
 
 import java.time.Instant;
@@ -79,9 +84,8 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
+import static org.hamcrest.Matchers.closeTo;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
@@ -104,12 +108,14 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
 
     @Before
     public void init() {
+        ThreadPool threadpool = new TestThreadPool("test");
         commonSettings = Settings.builder()
             .put(Environment.PATH_HOME_SETTING.getKey(), createTempDir().toAbsolutePath())
             .put(MachineLearningField.AUTODETECT_PROCESS.getKey(), false)
             .build();
         clusterService = mock(ClusterService.class);
         client = mock(Client.class);
+        when(client.threadPool()).thenReturn(threadpool);
         jobManager = mock(JobManager.class);
         jobManagerHolder = new JobManagerHolder(jobManager);
         licenseState = mock(MockLicenseState.class);
@@ -118,8 +124,17 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
         givenJobs(Collections.emptyList(), Collections.emptyList());
         givenDatafeeds(Collections.emptyList());
         givenDataFrameAnalytics(Collections.emptyList(), Collections.emptyList());
-        givenProcessorStats(Collections.emptyList());
         givenTrainedModels(Collections.emptyList());
+        givenTrainedModelStats(
+            new GetTrainedModelsStatsAction.Response(
+                new QueryPage<>(Collections.emptyList(), 0, GetTrainedModelsStatsAction.Response.RESULTS_FIELD)
+            )
+        );
+    }
+
+    @After
+    public void close() {
+        client.threadPool().shutdown();
     }
 
     private MachineLearningUsageTransportAction newUsageAction(Settings settings) {
@@ -232,96 +247,161 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
             expectedDfaCountByAnalysis.put(analysisName, ++analysisCount);
         });
 
-        givenProcessorStats(
-            Arrays.asList(
-                buildNodeStats(
-                    Arrays.asList("pipeline1", "pipeline2", "pipeline3"),
-                    Arrays.asList(
-                        Arrays.asList(
-                            new IngestStats.ProcessorStat(
-                                InferenceProcessor.TYPE,
-                                InferenceProcessor.TYPE,
-                                new IngestStats.Stats(10, 1, 0, 0)
-                            ),
-                            new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0)),
-                            new IngestStats.ProcessorStat(
-                                InferenceProcessor.TYPE,
-                                InferenceProcessor.TYPE,
-                                new IngestStats.Stats(100, 10, 0, 1)
-                            )
-                        ),
-                        Arrays.asList(
-                            new IngestStats.ProcessorStat(
-                                InferenceProcessor.TYPE,
-                                InferenceProcessor.TYPE,
-                                new IngestStats.Stats(5, 1, 0, 0)
-                            ),
-                            new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
-                        ),
-                        Arrays.asList(new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0)))
-                    )
-                ),
-                buildNodeStats(
-                    Arrays.asList("pipeline1", "pipeline2", "pipeline3"),
-                    Arrays.asList(
-                        Arrays.asList(
-                            new IngestStats.ProcessorStat(
-                                InferenceProcessor.TYPE,
-                                InferenceProcessor.TYPE,
-                                new IngestStats.Stats(0, 0, 0, 0)
-                            ),
-                            new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(0, 0, 0, 0)),
-                            new IngestStats.ProcessorStat(
-                                InferenceProcessor.TYPE,
-                                InferenceProcessor.TYPE,
-                                new IngestStats.Stats(10, 1, 0, 0)
-                            )
-                        ),
-                        Arrays.asList(
-                            new IngestStats.ProcessorStat(
-                                InferenceProcessor.TYPE,
-                                InferenceProcessor.TYPE,
-                                new IngestStats.Stats(5, 1, 0, 0)
-                            ),
-                            new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
-                        ),
-                        Arrays.asList(new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0)))
-                    )
-                )
-            )
-        );
-
         TrainedModelConfig trainedModel1 = TrainedModelConfigTests.createTestInstance("model_1")
-            .setEstimatedHeapMemory(100)
+            .setModelSize(100)
             .setEstimatedOperations(200)
             .setMetadata(Collections.singletonMap("analytics_config", "anything"))
+            .setInferenceConfig(ClassificationConfig.EMPTY_PARAMS)
             .build();
         TrainedModelConfig trainedModel2 = TrainedModelConfigTests.createTestInstance("model_2")
-            .setEstimatedHeapMemory(200)
+            .setModelSize(200)
             .setEstimatedOperations(400)
             .setMetadata(Collections.singletonMap("analytics_config", "anything"))
+            .setInferenceConfig(RegressionConfig.EMPTY_PARAMS)
             .build();
         TrainedModelConfig trainedModel3 = TrainedModelConfigTests.createTestInstance("model_3")
-            .setEstimatedHeapMemory(300)
+            .setModelSize(300)
             .setEstimatedOperations(600)
+            .setInferenceConfig(new NerConfig(null, null, null, null))
             .build();
         TrainedModelConfig trainedModel4 = TrainedModelConfigTests.createTestInstance("model_4")
             .setTags(Collections.singletonList("prepackaged"))
-            .setEstimatedHeapMemory(1000)
+            .setModelSize(1000)
             .setEstimatedOperations(2000)
             .build();
         givenTrainedModels(Arrays.asList(trainedModel1, trainedModel2, trainedModel3, trainedModel4));
 
-        Map<String, Integer> trainedModelsCountByAnalysis = new HashMap<>();
-        trainedModelsCountByAnalysis.put("classification", 0);
-        trainedModelsCountByAnalysis.put("regression", 0);
-        for (TrainedModelConfig trainedModel : Arrays.asList(trainedModel1, trainedModel2, trainedModel3)) {
-            if (trainedModel.getInferenceConfig() instanceof ClassificationConfig) {
-                trainedModelsCountByAnalysis.put("classification", trainedModelsCountByAnalysis.get("classification") + 1);
-            } else if (trainedModel.getInferenceConfig() instanceof RegressionConfig) {
-                trainedModelsCountByAnalysis.put("regression", trainedModelsCountByAnalysis.get("regression") + 1);
-            }
-        }
+        Map<String, Integer> trainedModelsCountByAnalysis = Map.of("classification", 1, "regression", 1, "ner", 1);
+
+        givenTrainedModelStats(
+            new GetTrainedModelsStatsAction.Response(
+                new QueryPage<>(
+                    List.of(
+                        new GetTrainedModelsStatsAction.Response.TrainedModelStats(
+                            trainedModel1.getModelId(),
+                            new TrainedModelSizeStats(trainedModel1.getModelSize(), 0L),
+                            new IngestStats(
+                                new IngestStats.Stats(0, 0, 0, 0),
+                                List.of(),
+                                Map.of(
+                                    "pipeline_1",
+                                    List.of(
+                                        new IngestStats.ProcessorStat(
+                                            InferenceProcessor.TYPE,
+                                            InferenceProcessor.TYPE,
+                                            new IngestStats.Stats(10, 1, 1000, 100)
+                                        ),
+                                        new IngestStats.ProcessorStat(
+                                            InferenceProcessor.TYPE,
+                                            InferenceProcessor.TYPE,
+                                            new IngestStats.Stats(20, 2, 2000, 200)
+                                        ),
+                                        // Adding a non inference processor that should be ignored
+                                        new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(100, 100, 100, 100))
+                                    )
+                                )
+                            ),
+                            1,
+                            null,
+                            null
+                        ),
+                        new GetTrainedModelsStatsAction.Response.TrainedModelStats(
+                            trainedModel2.getModelId(),
+                            new TrainedModelSizeStats(trainedModel2.getModelSize(), 0L),
+                            new IngestStats(
+                                new IngestStats.Stats(0, 0, 0, 0),
+                                List.of(),
+                                Map.of(
+                                    "pipeline_1",
+                                    List.of(
+                                        new IngestStats.ProcessorStat(
+                                            InferenceProcessor.TYPE,
+                                            InferenceProcessor.TYPE,
+                                            new IngestStats.Stats(30, 3, 3000, 300)
+                                        )
+                                    )
+                                )
+                            ),
+                            2,
+                            null,
+                            null
+                        ),
+                        new GetTrainedModelsStatsAction.Response.TrainedModelStats(
+                            trainedModel3.getModelId(),
+                            new TrainedModelSizeStats(trainedModel3.getModelSize(), 0L),
+                            new IngestStats(
+                                new IngestStats.Stats(0, 0, 0, 0),
+                                List.of(),
+                                Map.of(
+                                    "pipeline_2",
+                                    List.of(
+                                        new IngestStats.ProcessorStat(
+                                            InferenceProcessor.TYPE,
+                                            InferenceProcessor.TYPE,
+                                            new IngestStats.Stats(40, 4, 4000, 400)
+                                        )
+                                    )
+                                )
+                            ),
+                            3,
+                            null,
+                            new AllocationStats("model_3", null, null, null, Instant.now(), List.of()).setState(AllocationState.STOPPING)
+                        ),
+                        new GetTrainedModelsStatsAction.Response.TrainedModelStats(
+                            trainedModel4.getModelId(),
+                            new TrainedModelSizeStats(trainedModel4.getModelSize(), 0L),
+                            new IngestStats(
+                                new IngestStats.Stats(0, 0, 0, 0),
+                                List.of(),
+                                Map.of(
+                                    "pipeline_3",
+                                    List.of(
+                                        new IngestStats.ProcessorStat(
+                                            InferenceProcessor.TYPE,
+                                            InferenceProcessor.TYPE,
+                                            new IngestStats.Stats(50, 5, 5000, 500)
+                                        )
+                                    )
+                                )
+                            ),
+                            4,
+                            null,
+                            new AllocationStats(
+                                "model_4",
+                                2,
+                                2,
+                                1000,
+                                Instant.now(),
+                                List.of(
+                                    AllocationStats.NodeStats.forStartedState(
+                                        new DiscoveryNode("foo", new TransportAddress(TransportAddress.META_ADDRESS, 2), Version.CURRENT),
+                                        5,
+                                        42.0,
+                                        0,
+                                        Instant.now(),
+                                        Instant.now(),
+                                        randomIntBetween(1, 16),
+                                        randomIntBetween(1, 16)
+                                    ),
+                                    AllocationStats.NodeStats.forStartedState(
+                                        new DiscoveryNode("bar", new TransportAddress(TransportAddress.META_ADDRESS, 3), Version.CURRENT),
+                                        4,
+                                        50.0,
+                                        0,
+                                        Instant.now(),
+                                        Instant.now(),
+                                        randomIntBetween(1, 16),
+                                        randomIntBetween(1, 16)
+                                    )
+                                )
+                            ).setState(AllocationState.STARTED).setAllocationStatus(new AllocationStatus(2, 2))
+                        )
+                    ),
+                    0,
+                    GetTrainedModelsStatsAction.Response.RESULTS_FIELD
+                )
+            )
+        );
 
         var usageAction = newUsageAction(settings.build());
         PlainActionFuture<XPackUsageFeatureResponse> future = new PlainActionFuture<>();
@@ -406,36 +486,42 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
             assertThat(source.getValue("jobs.opened.forecasts.forecasted_jobs"), equalTo(2));
 
             assertThat(source.getValue("inference.trained_models._all.count"), equalTo(4));
-            assertThat(source.getValue("inference.trained_models.estimated_heap_memory_usage_bytes.min"), equalTo(100.0));
-            assertThat(source.getValue("inference.trained_models.estimated_heap_memory_usage_bytes.max"), equalTo(300.0));
-            assertThat(source.getValue("inference.trained_models.estimated_heap_memory_usage_bytes.total"), equalTo(600.0));
-            assertThat(source.getValue("inference.trained_models.estimated_heap_memory_usage_bytes.avg"), equalTo(200.0));
+            assertThat(source.getValue("inference.trained_models.model_size_bytes.min"), equalTo(100.0));
+            assertThat(source.getValue("inference.trained_models.model_size_bytes.max"), equalTo(300.0));
+            assertThat(source.getValue("inference.trained_models.model_size_bytes.total"), equalTo(600.0));
+            assertThat(source.getValue("inference.trained_models.model_size_bytes.avg"), equalTo(200.0));
             assertThat(source.getValue("inference.trained_models.estimated_operations.min"), equalTo(200.0));
             assertThat(source.getValue("inference.trained_models.estimated_operations.max"), equalTo(600.0));
             assertThat(source.getValue("inference.trained_models.estimated_operations.total"), equalTo(1200.0));
             assertThat(source.getValue("inference.trained_models.estimated_operations.avg"), equalTo(400.0));
             assertThat(source.getValue("inference.trained_models.count.total"), equalTo(4));
-            assertThat(
-                source.getValue("inference.trained_models.count.classification"),
-                equalTo(trainedModelsCountByAnalysis.get("classification"))
-            );
-            assertThat(
-                source.getValue("inference.trained_models.count.regression"),
-                equalTo(trainedModelsCountByAnalysis.get("regression"))
+            trainedModelsCountByAnalysis.forEach(
+                (name, count) -> assertThat(source.getValue("inference.trained_models.count." + name), equalTo(count))
             );
             assertThat(source.getValue("inference.trained_models.count.prepackaged"), equalTo(1));
             assertThat(source.getValue("inference.trained_models.count.other"), equalTo(1));
 
-            assertThat(source.getValue("inference.ingest_processors._all.pipelines.count"), equalTo(2));
-            assertThat(source.getValue("inference.ingest_processors._all.num_docs_processed.sum"), equalTo(130));
-            assertThat(source.getValue("inference.ingest_processors._all.num_docs_processed.min"), equalTo(0));
-            assertThat(source.getValue("inference.ingest_processors._all.num_docs_processed.max"), equalTo(100));
-            assertThat(source.getValue("inference.ingest_processors._all.time_ms.sum"), equalTo(14));
-            assertThat(source.getValue("inference.ingest_processors._all.time_ms.min"), equalTo(0));
-            assertThat(source.getValue("inference.ingest_processors._all.time_ms.max"), equalTo(10));
-            assertThat(source.getValue("inference.ingest_processors._all.num_failures.sum"), equalTo(1));
-            assertThat(source.getValue("inference.ingest_processors._all.num_failures.min"), equalTo(0));
-            assertThat(source.getValue("inference.ingest_processors._all.num_failures.max"), equalTo(1));
+            assertThat(source.getValue("inference.ingest_processors._all.pipelines.count"), equalTo(10));
+            assertThat(source.getValue("inference.ingest_processors._all.num_docs_processed.sum"), equalTo(150));
+            assertThat(source.getValue("inference.ingest_processors._all.num_docs_processed.min"), equalTo(10));
+            assertThat(source.getValue("inference.ingest_processors._all.num_docs_processed.max"), equalTo(50));
+            assertThat(source.getValue("inference.ingest_processors._all.time_ms.sum"), equalTo(15));
+            assertThat(source.getValue("inference.ingest_processors._all.time_ms.min"), equalTo(1));
+            assertThat(source.getValue("inference.ingest_processors._all.time_ms.max"), equalTo(5));
+            assertThat(source.getValue("inference.ingest_processors._all.num_failures.sum"), equalTo(1500));
+            assertThat(source.getValue("inference.ingest_processors._all.num_failures.min"), equalTo(100));
+            assertThat(source.getValue("inference.ingest_processors._all.num_failures.max"), equalTo(500));
+            assertThat(source.getValue("inference.deployments.count"), equalTo(2));
+            assertThat(source.getValue("inference.deployments.inference_counts.total"), equalTo(9.0));
+            assertThat(source.getValue("inference.deployments.inference_counts.min"), equalTo(4.0));
+            assertThat(source.getValue("inference.deployments.inference_counts.total"), equalTo(9.0));
+            assertThat(source.getValue("inference.deployments.inference_counts.max"), equalTo(5.0));
+            assertThat(source.getValue("inference.deployments.inference_counts.avg"), equalTo(4.5));
+            assertThat(source.getValue("inference.deployments.model_sizes_bytes.total"), equalTo(1300.0));
+            assertThat(source.getValue("inference.deployments.model_sizes_bytes.min"), equalTo(300.0));
+            assertThat(source.getValue("inference.deployments.model_sizes_bytes.max"), equalTo(1000.0));
+            assertThat(source.getValue("inference.deployments.model_sizes_bytes.avg"), equalTo(650.0));
+            assertThat(source.getValue("inference.deployments.time_ms.avg"), closeTo(45.55555555555556, 1e-10));
         }
     }
 
@@ -669,15 +755,6 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
         }).when(client).execute(same(GetDataFrameAnalyticsStatsAction.INSTANCE), any(), any());
     }
 
-    private void givenProcessorStats(List<NodeStats> stats) {
-        doAnswer(invocationOnMock -> {
-            @SuppressWarnings("unchecked")
-            ActionListener<NodesStatsResponse> listener = (ActionListener<NodesStatsResponse>) invocationOnMock.getArguments()[2];
-            listener.onResponse(new NodesStatsResponse(new ClusterName("_name"), stats, Collections.emptyList()));
-            return Void.TYPE;
-        }).when(client).execute(same(NodesStatsAction.INSTANCE), any(), any());
-    }
-
     private void givenTrainedModels(List<TrainedModelConfig> trainedModels) {
         doAnswer(invocationOnMock -> {
             @SuppressWarnings("unchecked")
@@ -690,6 +767,16 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
             );
             return Void.TYPE;
         }).when(client).execute(same(GetTrainedModelsAction.INSTANCE), any(), any());
+    }
+
+    private void givenTrainedModelStats(GetTrainedModelsStatsAction.Response trainedModelStats) {
+        doAnswer(invocationOnMock -> {
+            @SuppressWarnings("unchecked")
+            ActionListener<GetTrainedModelsStatsAction.Response> listener = (ActionListener<
+                GetTrainedModelsStatsAction.Response>) invocationOnMock.getArguments()[2];
+            listener.onResponse(trainedModelStats);
+            return Void.TYPE;
+        }).when(client).execute(same(GetTrainedModelsStatsAction.INSTANCE), any(), any());
     }
 
     private static Detector buildMinDetector(String fieldName) {
@@ -746,34 +833,6 @@ public class MachineLearningInfoTransportActionTests extends ESTestCase {
             when(stats.getMemoryUsage()).thenReturn(new MemoryUsage(jobId, Instant.now(), peakUsageBytes, null, null));
         }
         return stats;
-    }
-
-    private static NodeStats buildNodeStats(List<String> pipelineNames, List<List<IngestStats.ProcessorStat>> processorStats) {
-        IngestStats ingestStats = new IngestStats(
-            new IngestStats.Stats(0, 0, 0, 0),
-            Collections.emptyList(),
-            IntStream.range(0, pipelineNames.size()).boxed().collect(Collectors.toMap(pipelineNames::get, processorStats::get))
-        );
-        return new NodeStats(
-            mock(DiscoveryNode.class),
-            Instant.now().toEpochMilli(),
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            null,
-            ingestStats,
-            null,
-            null,
-            null
-        );
-
     }
 
     private static ForecastStats buildForecastStats(long numberOfForecasts) {
